[workspace]
resolver = "2"
members = [
    "database",
    "filler"
]

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[workspace.package]
rust-version = "1.81.0"
authors = ["suprtypo@pm.me"]
license-file = "LICENSE"
edition = "2021" # Rust edition

[workspace.dependencies]
kaspa-database = { path = "database" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.15.2" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.15.2" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.15.2" }
tokio = { version = "1.37.0", features = ["default", "signal"] }
futures-util = { version = "0.3.29", default-features = false }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
crossbeam-queue = "0.3.11"
moka = { version = "0.12.7", features = ["sync"] }
itertools = "0.13.0"
chrono = { version = "0.4.38", features = ["std"] }
bigdecimal = "0.4.3"
hex = "0.4.3"
regex = "1.10.4"
env_logger = "0.11.3"
log = "0.4.21"
clap = { version = "4.5.4", features = ["cargo"] }
