[workspace]
resolver = "2"
members = [
    "cli",
    "database",
    "mapping",
    "kaspad",
    "indexer"
]

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[workspace.package]
rust-version = "1.83.0"
authors = ["suprtypo@pm.me"]
license-file = "LICENSE"
edition = "2021" # Rust edition

[workspace.dependencies]
simply-kaspa-cli = { path = "cli" }
simply-kaspa-database = { path = "database" }
simply-kaspa-mapping = { path = "mapping" }
simply-kaspa-kaspad = { path = "kaspad" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.16.0" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.16.0" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.16.0" }
tokio = { version = "1.43.0", features = ["default", "signal"] }
futures-util = { version = "0.3.31", default-features = false }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }
deadpool = { version = "0.12.2", features = ["managed", "rt_tokio_1"] }
crossbeam-queue = "0.3.12"
moka = { version = "0.12.10", features = ["sync"] }
itertools = "0.14.0"
chrono = { version = "0.4.39", features = ["std", "serde"] }
futures = "0.3.31"
bigdecimal = "0.4.7"
hex = "0.4.3"
regex = "1.11.1"
workflow-core = "0.18.0"
env_logger = "0.11.6"
log = "0.4.25"
clap = { version = "4.5.27", features = ["cargo", "derive"] }
axum = { version = "0.8.1", features = ["http1", "ws", "json", "tokio"]}
tower-http = { version = "0.6.2", features = ["cors"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "preserve_order", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["hex", "macros"] }
serde_json = "1.0.138"
sysinfo = "0.33.1"
bytesize = "1.3.0"
humantime = "2.1.0"
