[package]
name = "kaspa-database"
description = "Kaspa SQL database client"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[lib]
name = "kaspa_database"
crate-type = ["cdylib", "lib"]

[dependencies]
kaspa-hashes.workspace = true
sqlx.workspace = true
itertools.workspace = true
regex.workspace = true
log.workspace = true
