[package]
name = "kaspa-database"
description = "Kaspa SQL database client"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[lib]
name = "kaspa_database"
crate-type = ["cdylib", "lib"]

[dependencies]
kaspa-hashes.workspace = true
hex.workspace = true
tokio.workspace = true
serde.workspace = true
crossbeam-queue.workspace = true
bigdecimal.workspace = true
env_logger.workspace = true
log.workspace = true
chrono.workspace = true
clap.workspace = true
itertools.workspace = true
regex.workspace = true
futures-util.workspace = true
sqlx.workspace = true
