[package]
name = "simply-kaspa-database"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[lib]
name = "simply_kaspa_database"
crate-type = ["cdylib", "lib"]

[dependencies]
kaspa-hashes.workspace = true
sqlx.workspace = true
itertools.workspace = true
regex.workspace = true
log.workspace = true
