[package]
name = "kaspa-db-filler-ng"
description = "Kaspa DB Filler NG"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
kaspa-database.workspace = true
kaspa-wrpc-client.workspace = true
kaspa-rpc-core.workspace = true
kaspa-hashes.workspace = true
tokio.workspace = true
futures-util.workspace = true
crossbeam-queue.workspace = true
moka.workspace = true
chrono.workspace = true
bigdecimal.workspace = true
hex.workspace = true
env_logger.workspace = true
log.workspace = true
clap.workspace = true
