[package]
name = "simply-kaspa-indexer"
description = "Simply Kaspa Indexer"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
simply-kaspa-database.workspace = true
simply-kaspa-mapping.workspace = true
kaspa-wrpc-client.workspace = true
kaspa-rpc-core.workspace = true
kaspa-hashes.workspace = true
tokio.workspace = true
futures-util.workspace = true
crossbeam-queue.workspace = true
moka.workspace = true
chrono.workspace = true
bigdecimal.workspace = true
hex.workspace = true
env_logger.workspace = true
log.workspace = true
clap.workspace = true
