[package]
name = "simply-kaspa-indexer"
description = "Simply Kaspa Indexer"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
simply-kaspa-cli.workspace = true
simply-kaspa-kaspad.workspace = true
simply-kaspa-database.workspace = true
simply-kaspa-mapping.workspace = true
kaspa-wrpc-client.workspace = true
kaspa-rpc-core.workspace = true
kaspa-hashes.workspace = true
tokio.workspace = true
deadpool.workspace = true
futures-util.workspace = true
crossbeam-queue.workspace = true
moka.workspace = true
chrono.workspace = true
bigdecimal.workspace = true
hex.workspace = true
env_logger.workspace = true
log.workspace = true
clap.workspace = true
axum.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-axum.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
bytesize.workspace = true
humantime.workspace = true
