[package]
name = "simply-kaspa-kaspad"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[lib]
name = "simply_kaspa_kaspad"
crate-type = ["cdylib", "lib"]

[dependencies]
kaspa-wrpc-client.workspace = true
kaspa-rpc-core.workspace = true
tokio.workspace = true
deadpool.workspace = true
futures.workspace = true
workflow-core.workspace = true
log.workspace = true
