[package]
name = "simply-kaspa-mapping"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[lib]
name = "simply_kaspa_mapping"
crate-type = ["cdylib", "lib"]

[dependencies]
simply-kaspa-database.workspace = true
kaspa-rpc-core.workspace = true
bigdecimal.workspace = true
log.workspace = true
clap.workspace = true
